# lumen-asr

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  PRODUCT.md  README.md  dev-install.sh
.github/: pull_request_template.md
.github/workflows/: ci-macos.yml  public-repository-boundary.yml  release-macos.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/scripts/: fetch-plex-fonts.mjs
apps/desktop/src/: App.tsx  Capsule.tsx  ChordCaptureChip.tsx  HotkeyRecorder.tsx  Icons.tsx  OnboardingWizard.tsx  ThemeToggle.tsx  api.ts  audioDeviceSelection.ts  hotkeyFormat.ts  main.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: asr_models.rs  capsule.rs  commands.rs  config.rs  context_capture.rs  context_inference.rs  corrector_cmd.rs  corrector_probe.rs  corrector_svc.rs  dictation.rs  edit_attribution.rs  hotkey.rs  hotkey_validate.rs  inject_cmd.rs  learning.rs  lib.rs  main.rs  mod_chord.rs  onboard.rs  pane_observer.rs  permissions_cmd.rs  pipeline_attempt.rs  provider_presets.rs  session_debug.rs  volume_mon.rs
apps/desktop/src/assets/icon/: README.md
apps/desktop/tests/: audioDeviceSelection.test.ts
crates/lumen-asr/: Cargo.toml
crates/lumen-asr/examples/: smoke_sensevoice.rs
crates/lumen-asr/src/: audio.rs  cloud_openai.rs  lib.rs  paths.rs  qwen.rs  qwen_worker.py  sensevoice.rs  whisper.rs
crates/lumen-asr/tests/: qwen_worker.rs  test_qwen_worker.py
crates/lumen-bench/: Cargo.toml
crates/lumen-bench/src/: audio.rs  config.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  reference.rs  report.rs  runner.rs
crates/lumen-core/: Cargo.toml
crates/lumen-core/src/: lib.rs  session.rs  types.rs
crates/lumen-corrector/: Cargo.toml
crates/lumen-corrector/src/: lib.rs  openai_compat.rs  preprocess.rs
crates/lumen-dictionary/: Cargo.toml
crates/lumen-dictionary/src/: lib.rs
crates/lumen-inject/: Cargo.toml
crates/lumen-inject/src/: lib.rs
crates/lumen-platform/: Cargo.toml
crates/lumen-platform-macos/: Cargo.toml
crates/lumen-platform-macos/src/: focused_field.rs  hotkey_tap.rs  inject.rs  lib.rs  permissions.rs
crates/lumen-platform/src/: lib.rs
crates/lumen-prompts/: Cargo.toml
crates/lumen-prompts/src/: lib.rs
crates/lumen-store/: Cargo.toml
crates/lumen-store/src/: lib.rs  schema.rs
docs/: CORRECT_POLISH_DESIGN.md  IMPLEMENTATION_PLAN_HOTKEY_FOCUS.md  MACOS_GITHUB_RELEASE.md  MACOS_LOCAL_SIGNING.md  MILESTONES.md  ONBOARDING_DESIGN.md  PUBLIC_REPOSITORY_BOUNDARY.md  README.md  UI_DESIGN.md  WINDOWS_CROSS_PLATFORM_ASSESSMENT.md
docs/governance/: PUBLIC_REPOSITORY_BOUNDARY.md
docs/product/: README.md
docs/release/macos/: GITHUB_RELEASE.md  LOCAL_SIGNING.md  RELEASE_NOTES.md
docs/research/: ASR_CONTEXT_CAPABILITY_SELECTION.md
docs/superpowers/specs/: 2026-07-10-launch-media-system-design.md
docs/ui/: README.md
scripts/ci/: check-pr-scope.sh  check-public-repo-boundary.sh  test-public-repo-boundary.sh
scripts/macos/: collect-release-asset.sh  create_local_codesign_identity.swift  dev-install.sh  ensure-local-identity.sh  entitlements.dev.plist  gen-app-icon.sh  resolve-identity.sh  sign-app.sh
scripts/release/: set-tauri-version.mjs
