[package]
name = "lumen-asr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ASR engine ports (SenseVoice via sherpa, Whisper)"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
lumen-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
# Future: sherpa-onnx / whisper bindings
sherpa = []
whisper = []
