[package]
name = "lumen-asr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ASR engine ports (SenseVoice via sherpa, Whisper) + mic capture"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
lumen-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
cpal = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
# Offline SenseVoice / Whisper via official bindings (downloads prebuilt static lib on first build)
sherpa-onnx = { version = "1.13.4", optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = ["sherpa"]
sherpa = ["dep:sherpa-onnx"]
