[package]
name = "lumen-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Replay a private reference dataset through Lumen and score the output"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
lumen-asr = { workspace = true }
lumen-core = { workspace = true }
lumen-corrector = { workspace = true }
lumen-prompts = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
