[package]
name = "lumen-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Session state machine and orchestration types for Lumen ASR"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
