[package]
name = "lumen-corrector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model-based text corrector + rule preprocess"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
lumen-core = { workspace = true }
lumen-prompts = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
once_cell = "1"

[dev-dependencies]
tokio = { workspace = true }
