[package]
name = "lumen-platform-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "macOS implementations: permissions stubs, inject backend stubs (M4 fills in)"

[dependencies]
async-trait = { workspace = true }
lumen-core = { workspace = true }
lumen-inject = { workspace = true }
lumen-platform = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# Real AX / paste / CGEvent land in M4.
# objc2 = "0.6"
# objc2-app-kit = "0.3"
