[package]
name = "lumen-platform-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "macOS: permissions, paste-first inject, AX/type fallbacks"

[dependencies]
async-trait = { workspace = true }
lumen-core = { workspace = true }
lumen-inject = { workspace = true }
lumen-platform = { workspace = true }
tracing = { workspace = true }
cpal = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
