[package]
name = "lumen-platform-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "macOS: permissions, paste-first inject, AX/type fallbacks"

[dependencies]
async-trait = { workspace = true }
lumen-core = { workspace = true }
lumen-inject = { workspace = true }
lumen-platform = { workspace = true }
tracing = { workspace = true }
cpal = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSWorkspace", "NSRunningApplication"] }
