[package]
name = "lumen-asr-desktop"
default-run = "lumen-asr-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lumen ASR desktop shell (Tauri)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lumen-platform = { workspace = true }
lumen-store = { workspace = true }
lumen-core = { workspace = true }
lumen-dictionary = { workspace = true }
lumen-asr = { workspace = true }
lumen-corrector = { workspace = true }
lumen-prompts = { workspace = true }
lumen-inject = { workspace = true }
lumen-platform-macos = { workspace = true }
lumen-context = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
cpal = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
blake3 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"
security-framework-sys = "2.17"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
